--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <version>8.3.0</version>
         </dependency>
         
+        <!-- Apache Commons Math for vector operations -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+        
         <!-- JUnit for testing -->
         <dependency>
             <groupId>junit</groupId>
@@ -77,7 +84,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.myapp.CameraUI</mainClass>
+                    <mainClass>com.myapp.gui.DeepLearningGUI</mainClass>
                 </configuration>
             </plugin>
         </plugins>
